samples/_failures_safe/1761481365_a91c3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddeec3d3.c: In function ‘main’:
./samples/SAFE/__tmp_ddeec3d3.c:143:5: error: expected declaration or statement at end of input
  143 |     }
      |     ^
